--- a/youtube_downloader/pyproject.toml
+++ b/youtube_downloader/pyproject.toml
@@ -5,12 +5,15 @@ description = ""
 authors = ["Dhiraj Suvarna"]
 
 [tool.poetry.dependencies]
-python = ">=3.10.0,<3.11"
+python = ">=3.11"
 pytube = "^15.0.0"
 typer = "^0.9.0"
 pydantic = "^2.5.3"
 youtube-transcript-api = "^0.6.2"
 python-slugify = "^8.0.1"
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.28.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
