--- a/webscraping/scrapy/pyproject.toml
+++ b/webscraping/scrapy/pyproject.toml
@@ -11,6 +11,7 @@ scrapy = "^2.11.0"
 requests-html = "^0.10.0"
 websocket-client = "^1.7.0"
 scrapy-playwright = "^0.0.34"
+scrapy-user-agents = "^0.1.1"
 
 
 [build-system]
